// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogsContent /> tests DefaultConsoleViewStepDetails snapshot test 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_console-details_CONSOLE_LOGS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="CONSOLE_LOGS"
          id="bp3-tab-title_console-details_CONSOLE_LOGS"
          role="tab"
          tabindex="0"
        >
          Logs
        </div>
        <div
          aria-controls="bp3-tab-panel_console-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_console-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_console-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_console-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_console-details_CONSOLE_LOGS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_console-details_CONSOLE_LOGS"
        role="tabpanel"
      >
        <div
          class="main"
          data-mode="console-view"
        >
          <div
            class="header"
          >
            <div>
              execution.consoleLogs
            </div>
            <div
              class="rhs"
            >
              <div
                class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
                data-name=""
              >
                <span
                  class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
                  data-icon="thinner-search"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
                <input
                  class="bp3-input  ExpandingSearchInput--find"
                  dir="auto"
                  placeholder="Search"
                  style="padding-right: 130px;"
                  type="search"
                  value=""
                />
              </div>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="nav-settings"
                >
                  <svg
                    fill="none"
                    height="22"
                    viewBox="0 0 18 18"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                      fill="#ccc"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                      fill="#ccc"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="full-screen"
                >
                  <svg
                    fill="none"
                    height="22"
                    viewBox="0 0 24 24"
                    width="22"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                      stroke="currentColor"
                      stroke-linecap="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <pre
            class="container"
          >
            <div
              class="noLogs"
            >
              common.logs.noLogsText
            </div>
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests Logs test GroupedLogs 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 130px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="nav-settings"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 18 18"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                fill="#ccc"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                fill="#ccc"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div>
      Grouped logs
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests Logs test SingleSectionLogs 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 130px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="copy-alt"
          >
            <svg
              fill="none"
              height="18"
              viewBox="0 0 8 9"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="nav-settings"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 18 18"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                fill="#ccc"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                fill="#ccc"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <pre
      class="container"
    >
      <div
        data-test-id="virtuoso-scroller"
        data-virtuoso-scroller="true"
        style="height: 100%; outline: none; overflow-y: auto; position: relative;"
        tabindex="0"
      >
        <div
          data-viewport-type="element"
          style="width: 100%; height: 100%; position: absolute; top: 0px;"
        >
          <div
            data-test-id="virtuoso-item-list"
            style="box-sizing: border-box; padding-top: 0px; padding-bottom: 0px; margin-top: 0px;"
          />
        </div>
      </div>
      <button
        aria-label="Bottom"
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main singleSectionScrollBtn Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary Button--size Button--small"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-arrow-down StyledProps--main StyledProps--padding-right-xsmall"
          icon="arrow-down"
        >
          <svg
            data-icon="arrow-down"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              arrow-down
            </desc>
            <path
              d="M13 8c-.3 0-.5.1-.7.3L9 11.6V2c0-.5-.4-1-1-1s-1 .5-1 1v9.6L3.7 8.3C3.5 8.1 3.3 8 3 8c-.5 0-1 .5-1 1 0 .3.1.5.3.7l5 5c.2.2.4.3.7.3s.5-.1.7-.3l5-5c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Bottom
        </span>
      </button>
    </pre>
  </div>
</div>
`;

exports[`<LogsContent /> tests console-view error message test 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 130px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="nav-settings"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 18 18"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                fill="#ccc"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                fill="#ccc"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="SplitPane  horizontal "
      style="display: flex; flex: 1; height: 100%; position: relative; outline: none; overflow: hidden; user-select: text; z-index: 2; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 1; position: relative; outline: none;"
      >
        <pre
          class="container"
        >
          <div
            class="noLogs"
          >
            common.logs.noLogsText
          </div>
        </pre>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
        style="display: inline-table;"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 132px; display: flex;"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="StyledProps--font StyledProps--main errorMsgs"
          >
            <div
              class="errorMsgContainer"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
              >
                <span
                  class="bp3-icon StyledProps--main errorIcon"
                  data-icon="circle-cross"
                >
                  <svg
                    height="16"
                    viewBox="0 0 13 13"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-red700 StyledProps--inline"
                >
                  Not Found
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                  data-icon="info"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96zm1.846-7.352v1.03h-1.01v-1.03z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="Layout--vertical StyledProps--main errorListTextContainer shrink"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-white StyledProps--margin-bottom-xsmall"
                  >
                    common.errorHandler.issueCouldBe
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                  >
                    <span
                      class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-white StyledProps--font-size-small StyledProps--inline"
                    >
                      - Check if the image exists and if the permissions are scoped for the authenticated user
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
              >
                <span
                  class="bp3-icon bp3-icon-lightbulb StyledProps--main StyledProps--margin-right-small"
                  icon="lightbulb"
                >
                  <svg
                    data-icon="lightbulb"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lightbulb
                    </desc>
                    <path
                      d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1zm1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1zm-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="Layout--vertical StyledProps--main errorListTextContainer shrink"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-white StyledProps--margin-bottom-xsmall"
                  >
                    common.errorHandler.tryTheseSuggestions
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                  >
                    <span
                      class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-white StyledProps--font-size-small StyledProps--inline"
                    >
                      - Unable to fetch the tags for the image
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests console-view snapshot test 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 130px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="nav-settings"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 18 18"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                fill="#ccc"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                fill="#ccc"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <pre
      class="container"
    >
      <div
        class="noLogs"
      >
        common.logs.noLogsText
      </div>
    </pre>
  </div>
</div>
`;

exports[`<LogsContent /> tests console-view warning message test 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 130px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="nav-settings"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 18 18"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                fill="#ccc"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                fill="#ccc"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="SplitPane  horizontal "
      style="display: flex; flex: 1; height: 100%; position: relative; outline: none; overflow: hidden; user-select: text; z-index: 2; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 1; position: relative; outline: none;"
      >
        <pre
          class="container"
        >
          <div
            class="noLogs"
          >
            common.logs.noLogsText
          </div>
        </pre>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
        style="display: inline-table;"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 132px; display: flex;"
      >
        <div
          class="Layout--horizontal StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="StyledProps--font StyledProps--main errorMsgs isWarning"
          >
            <div
              class="errorMsgContainer"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
              >
                <span
                  class="bp3-icon bp3-icon-warning-sign StyledProps--main errorIcon"
                  icon="warning-sign"
                >
                  <svg
                    data-icon="warning-sign"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      warning-sign
                    </desc>
                    <path
                      d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-red700 StyledProps--inline"
                >
                  Not Found
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                  data-icon="info"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96zm1.846-7.352v1.03h-1.01v-1.03z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="Layout--vertical StyledProps--main errorListTextContainer shrink"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-white StyledProps--margin-bottom-xsmall"
                  >
                    common.errorHandler.issueCouldBe
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                  >
                    <span
                      class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-white StyledProps--font-size-small StyledProps--inline"
                    >
                      - Check if the image exists and if the permissions are scoped for the authenticated user
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
              >
                <span
                  class="bp3-icon bp3-icon-lightbulb StyledProps--main StyledProps--margin-right-small"
                  icon="lightbulb"
                >
                  <svg
                    data-icon="lightbulb"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lightbulb
                    </desc>
                    <path
                      d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1zm1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1zm-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="Layout--vertical StyledProps--main errorListTextContainer shrink"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-white StyledProps--margin-bottom-xsmall"
                  >
                    common.errorHandler.tryTheseSuggestions
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                  >
                    <span
                      class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-white StyledProps--font-size-small StyledProps--inline"
                    >
                      - Unable to fetch the tags for the image
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests step-details snapshot test 1`] = `
<div>
  <div
    class="main"
    data-mode="step-details"
  >
    <div
      class="header"
    >
      <div>
        execution.stepLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 130px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="nav-settings"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 18 18"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                fill="#ccc"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                fill="#ccc"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
        <a
          class="toConsoleView"
          href="/"
        >
          <span>
            consoleView
          </span>
        </a>
      </div>
    </div>
    <pre
      class="container"
    >
      <div
        class="noLogs"
      >
        common.logs.noLogsText
      </div>
    </pre>
  </div>
</div>
`;
